BeginnersParser.py
# Generated from Beginners.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BeginnersParser ( Parser ):

    grammarFileName = "Beginners.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inicio:'", "'escribe'", "'('", "')'", 
                     "';'", "'='", "'numero'", "'decimal'", "'palabra'", 
                     "'si_no'", "'si'", "'{'", "'}'", "'sino'", "'repite'", 
                     "'mientras'", "'funcion'", "','", "'-'", "'*'", "'/'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'\"'", 
                     "'''", "'+'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "OPERADOR", "NUMERO", "DECIMAL", 
                      "ID", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_bloque = 1
    RULE_instruccion = 2
    RULE_mostrar = 3
    RULE_contenido = 4
    RULE_elemento = 5
    RULE_asignar = 6
    RULE_tipo = 7
    RULE_si = 8
    RULE_darvueltas = 9
    RULE_mientras = 10
    RULE_hacerFuncion = 11
    RULE_parametros = 12
    RULE_expresion = 13
    RULE_termino = 14
    RULE_factor = 15
    RULE_condicion = 16
    RULE_texto = 17

    ruleNames =  [ "programa", "bloque", "instruccion", "mostrar", "contenido", 
                   "elemento", "asignar", "tipo", "si", "darvueltas", "mientras", 
                   "hacerFuncion", "parametros", "expresion", "termino", 
                   "factor", "condicion", "texto" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    OPERADOR=30
    NUMERO=31
    DECIMAL=32
    ID=33
    WS=34
    COMENTARIO=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(BeginnersParser.BloqueContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = BeginnersParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(BeginnersParser.T__0)
            self.state = 37
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeginnersParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(BeginnersParser.InstruccionContext,i)


        def getRuleIndex(self):
            return BeginnersParser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = BeginnersParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 39
                self.instruccion()
                self.state = 42 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 233348) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mostrar(self):
            return self.getTypedRuleContext(BeginnersParser.MostrarContext,0)


        def asignar(self):
            return self.getTypedRuleContext(BeginnersParser.AsignarContext,0)


        def si(self):
            return self.getTypedRuleContext(BeginnersParser.SiContext,0)


        def darvueltas(self):
            return self.getTypedRuleContext(BeginnersParser.DarvueltasContext,0)


        def hacerFuncion(self):
            return self.getTypedRuleContext(BeginnersParser.HacerFuncionContext,0)


        def mientras(self):
            return self.getTypedRuleContext(BeginnersParser.MientrasContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_instruccion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = BeginnersParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.mostrar()
                pass
            elif token in [7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.asignar()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.si()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.darvueltas()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.hacerFuncion()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.mientras()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MostrarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contenido(self):
            return self.getTypedRuleContext(BeginnersParser.ContenidoContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_mostrar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMostrar" ):
                return visitor.visitMostrar(self)
            else:
                return visitor.visitChildren(self)




    def mostrar(self):

        localctx = BeginnersParser.MostrarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mostrar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(BeginnersParser.T__1)
            self.state = 53
            self.match(BeginnersParser.T__2)
            self.state = 54
            self.contenido()
            self.state = 55
            self.match(BeginnersParser.T__3)
            self.state = 56
            self.match(BeginnersParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContenidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elemento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeginnersParser.ElementoContext)
            else:
                return self.getTypedRuleContext(BeginnersParser.ElementoContext,i)


        def OPERADOR(self, i:int=None):
            if i is None:
                return self.getTokens(BeginnersParser.OPERADOR)
            else:
                return self.getToken(BeginnersParser.OPERADOR, i)

        def getRuleIndex(self):
            return BeginnersParser.RULE_contenido

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContenido" ):
                return visitor.visitContenido(self)
            else:
                return visitor.visitChildren(self)




    def contenido(self):

        localctx = BeginnersParser.ContenidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_contenido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.elemento()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 59
                self.match(BeginnersParser.OPERADOR)
                self.state = 60
                self.elemento()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def texto(self):
            return self.getTypedRuleContext(BeginnersParser.TextoContext,0)


        def expresion(self):
            return self.getTypedRuleContext(BeginnersParser.ExpresionContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_elemento

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElemento" ):
                return visitor.visitElemento(self)
            else:
                return visitor.visitChildren(self)




    def elemento(self):

        localctx = BeginnersParser.ElementoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elemento)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.texto()
                pass
            elif token in [3, 31, 32, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.expresion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(BeginnersParser.TipoContext,0)


        def ID(self):
            return self.getToken(BeginnersParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(BeginnersParser.ExpresionContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_asignar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignar" ):
                return visitor.visitAsignar(self)
            else:
                return visitor.visitChildren(self)




    def asignar(self):

        localctx = BeginnersParser.AsignarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.tipo()
            self.state = 71
            self.match(BeginnersParser.ID)
            self.state = 72
            self.match(BeginnersParser.T__5)
            self.state = 73
            self.expresion()
            self.state = 74
            self.match(BeginnersParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeginnersParser.RULE_tipo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = BeginnersParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion(self):
            return self.getTypedRuleContext(BeginnersParser.CondicionContext,0)


        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeginnersParser.BloqueContext)
            else:
                return self.getTypedRuleContext(BeginnersParser.BloqueContext,i)


        def getRuleIndex(self):
            return BeginnersParser.RULE_si

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSi" ):
                return visitor.visitSi(self)
            else:
                return visitor.visitChildren(self)




    def si(self):

        localctx = BeginnersParser.SiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_si)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(BeginnersParser.T__10)
            self.state = 79
            self.match(BeginnersParser.T__2)
            self.state = 80
            self.condicion()
            self.state = 81
            self.match(BeginnersParser.T__3)
            self.state = 82
            self.match(BeginnersParser.T__11)
            self.state = 83
            self.bloque()
            self.state = 84
            self.match(BeginnersParser.T__12)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 85
                self.match(BeginnersParser.T__13)
                self.state = 86
                self.match(BeginnersParser.T__11)
                self.state = 87
                self.bloque()
                self.state = 88
                self.match(BeginnersParser.T__12)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DarvueltasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(BeginnersParser.ExpresionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(BeginnersParser.BloqueContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_darvueltas

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDarvueltas" ):
                return visitor.visitDarvueltas(self)
            else:
                return visitor.visitChildren(self)




    def darvueltas(self):

        localctx = BeginnersParser.DarvueltasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_darvueltas)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(BeginnersParser.T__14)
            self.state = 93
            self.match(BeginnersParser.T__2)
            self.state = 94
            self.expresion()
            self.state = 95
            self.match(BeginnersParser.T__3)
            self.state = 96
            self.match(BeginnersParser.T__11)
            self.state = 97
            self.bloque()
            self.state = 98
            self.match(BeginnersParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MientrasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion(self):
            return self.getTypedRuleContext(BeginnersParser.CondicionContext,0)


        def bloque(self):
            return self.getTypedRuleContext(BeginnersParser.BloqueContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_mientras

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMientras" ):
                return visitor.visitMientras(self)
            else:
                return visitor.visitChildren(self)




    def mientras(self):

        localctx = BeginnersParser.MientrasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_mientras)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(BeginnersParser.T__15)
            self.state = 101
            self.match(BeginnersParser.T__2)
            self.state = 102
            self.condicion()
            self.state = 103
            self.match(BeginnersParser.T__3)
            self.state = 104
            self.match(BeginnersParser.T__11)
            self.state = 105
            self.bloque()
            self.state = 106
            self.match(BeginnersParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HacerFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BeginnersParser.ID, 0)

        def bloque(self):
            return self.getTypedRuleContext(BeginnersParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(BeginnersParser.ParametrosContext,0)


        def getRuleIndex(self):
            return BeginnersParser.RULE_hacerFuncion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHacerFuncion" ):
                return visitor.visitHacerFuncion(self)
            else:
                return visitor.visitChildren(self)




    def hacerFuncion(self):

        localctx = BeginnersParser.HacerFuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_hacerFuncion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(BeginnersParser.T__16)
            self.state = 109
            self.match(BeginnersParser.ID)
            self.state = 110
            self.match(BeginnersParser.T__2)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 111
                self.parametros()


            self.state = 114
            self.match(BeginnersParser.T__3)
            self.state = 115
            self.match(BeginnersParser.T__11)
            self.state = 116
            self.bloque()
            self.state = 117
            self.match(BeginnersParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BeginnersParser.ID)
            else:
                return self.getToken(BeginnersParser.ID, i)

        def getRuleIndex(self):
            return BeginnersParser.RULE_parametros

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = BeginnersParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BeginnersParser.ID)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 120
                self.match(BeginnersParser.T__17)
                self.state = 121
                self.match(BeginnersParser.ID)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeginnersParser.TerminoContext)
            else:
                return self.getTypedRuleContext(BeginnersParser.TerminoContext,i)


        def OPERADOR(self, i:int=None):
            if i is None:
                return self.getTokens(BeginnersParser.OPERADOR)
            else:
                return self.getToken(BeginnersParser.OPERADOR, i)

        def getRuleIndex(self):
            return BeginnersParser.RULE_expresion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = BeginnersParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.termino()
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 128
                    _la = self._input.LA(1)
                    if not(_la==19 or _la==30):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 129
                    self.termino() 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeginnersParser.FactorContext)
            else:
                return self.getTypedRuleContext(BeginnersParser.FactorContext,i)


        def getRuleIndex(self):
            return BeginnersParser.RULE_termino

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermino" ):
                return visitor.visitTermino(self)
            else:
                return visitor.visitChildren(self)




    def termino(self):

        localctx = BeginnersParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.factor()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20 or _la==21:
                self.state = 136
                _la = self._input.LA(1)
                if not(_la==20 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 137
                self.factor()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(BeginnersParser.ExpresionContext,0)


        def NUMERO(self):
            return self.getToken(BeginnersParser.NUMERO, 0)

        def ID(self):
            return self.getToken(BeginnersParser.ID, 0)

        def DECIMAL(self):
            return self.getToken(BeginnersParser.DECIMAL, 0)

        def getRuleIndex(self):
            return BeginnersParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = BeginnersParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_factor)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(BeginnersParser.T__2)
                self.state = 144
                self.expresion()
                self.state = 145
                self.match(BeginnersParser.T__3)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(BeginnersParser.NUMERO)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(BeginnersParser.ID)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.match(BeginnersParser.DECIMAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BeginnersParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(BeginnersParser.ExpresionContext,i)


        def getRuleIndex(self):
            return BeginnersParser.RULE_condicion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicion" ):
                return visitor.visitCondicion(self)
            else:
                return visitor.visitChildren(self)




    def condicion(self):

        localctx = BeginnersParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.expresion()
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 264241152) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 154
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BeginnersParser.RULE_texto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTexto" ):
                return visitor.visitTexto(self)
            else:
                return visitor.visitChildren(self)




    def texto(self):

        localctx = BeginnersParser.TextoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_texto)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(BeginnersParser.T__27)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68451041278) != 0):
                    self.state = 157
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==28:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 162
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 163
                self.match(BeginnersParser.T__27)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(BeginnersParser.T__28)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 68182605822) != 0):
                    self.state = 165
                    _la = self._input.LA(1)
                    if _la <= 0 or _la==29:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 170
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 171
                self.match(BeginnersParser.T__28)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





